framec_tests/language_specific/typescript/v3_facade_smoke/negative/strict_unterminated_template.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                -> $B();
                const s = `unterminated template...
            }
        }
        $B {
        }
}

